Fix for homepage collection list images getting cut off

--- a/assets/base.css
+++ b/assets/base.css
@@ -3672,3 +3672,7 @@ details-disclosure > details {
     width: 100%;
   }
 }
+
+.collection-list-homepage .card__media .media img {
+  object-fit: cover;
+}
